# src/api/controllers/items_handler.rs
@@ -1,5 +1,5 @@
-use crate::api::dto::item::{GetItemsRequestDTO, ItemDTO};
-use crate::domain::error::{ApiError};
+use crate::api::dto::item::{CreateItemResponseDTO, GetItemsRequestDTO, ItemDTO};
+use crate::domain::error::ApiError;
 use crate::domain::repositories::repository::ResultPaging;
 use crate::domain::services::order::CoreService;
 use actix_web::{web, Result};
@@ -8,7 +8,6 @@ pub async fn get_items(
     core_service: web::Data<dyn CoreService>,
     data: web::Json<GetItemsRequestDTO>,
 ) -> Result<web::Json<ResultPaging<ItemDTO>>, ApiError> {
-
     let data = data.into_inner();
     let query = data.query.clone().map(|q| q.into());
     let sort_by = data.sort_by.clone().map(|q| q.into());
@@ -20,17 +19,28 @@ pub async fn get_items(
     Ok(web::Json(selection.into()))
 }
 
+pub async fn create_item(
+    core_service: web::Data<dyn CoreService>,
+    data: web::Json<ItemDTO>,
+) -> Result<web::Json<CreateItemResponseDTO>, ApiError> {
+    let data = data.into_inner();
+
+    let id = core_service.create_item(data.into()).await?;
+
+    Ok(web::Json(CreateItemResponseDTO { id }))
+}
+
 #[cfg(test)]
 mod tests {
-    use std::sync::Arc;
-    use actix_web;
-    use actix_web::web;
-    use actix_web::middleware::Logger;
     use crate::api::controllers::items_handler::get_items;
     use crate::api::dto::item::{GetItemsRequestDTO, ItemDTO};
     use crate::domain::models::items::Item;
     use crate::domain::repositories::repository::ResultPaging;
     use crate::domain::services::order::{CoreService, MockCoreService};
+    use actix_web;
+    use actix_web::middleware::Logger;
+    use actix_web::web;
+    use std::sync::Arc;
 
     #[actix_web::test]
     async fn test_should_get_items() {
@@ -39,18 +49,26 @@ mod tests {
 
         let mut mock_core = MockCoreService::new();
 
-        mock_core
-            .expect_get_items()
-            .returning(|q, s, o, l| -> _ {
-                assert_eq!(q, None);
-                assert_eq!(s, None);
-                assert_eq!(l, 10);
-                assert_eq!(o, 0);
+        mock_core.expect_get_items().returning(|q, s, o, l| -> _ {
+            assert_eq!(q, None);
+            assert_eq!(s, None);
+            assert_eq!(l, 10);
+            assert_eq!(o, 0);
 
-                Box::pin(async move { Ok(ResultPaging{items: vec![
-                    Item{ id: 0, name: String::from("test"), price: 0.0, description: String::from("test"), sizes: vec![] },
-                ], total: 1, offset: 0}) })
-            });
+            Box::pin(async move {
+                Ok(ResultPaging {
+                    items: vec![Item {
+                        id: 0,
+                        name: String::from("test"),
+                        price: 0.0,
+                        description: String::from("test"),
+                        sizes: vec![],
+                    }],
+                    total: 1,
+                    offset: 0,
+                })
+            })
+        });
 
         let core_service: Arc<dyn CoreService> = Arc::new(mock_core);
 
@@ -58,12 +76,27 @@ mod tests {
             actix_web::App::new()
                 .app_data(web::Data::from(core_service))
                 .wrap(Logger::default())
-                .service(web::scope("").route("/items", web::get().to(get_items)))
+                .service(web::scope("").route("/items", web::get().to(get_items))),
         )
-            .await;
+        .await;
 
-        let req_model = GetItemsRequestDTO{ query: None, sort_by: None, offset: 0, limit: 10 };
-        let want_resp = ResultPaging{items: vec![ItemDTO{ id: 0, name: String::from("test"), price: 0.0, description: String::from("test"), sizes: vec![]}], total: 1, offset: 0};
+        let req_model = GetItemsRequestDTO {
+            query: None,
+            sort_by: None,
+            offset: 0,
+            limit: 10,
+        };
+        let want_resp = ResultPaging {
+            items: vec![ItemDTO {
+                id: 0,
+                name: String::from("test"),
+                price: 0.0,
+                description: String::from("test"),
+                sizes: vec![],
+            }],
+            total: 1,
+            offset: 0,
+        };
 
         let req = actix_web::test::TestRequest::get()
             .uri("/items")
@@ -82,7 +115,6 @@ mod tests {
         assert_eq!(resp_model, want_resp);
     }
 
-
     #[actix_web::test]
     async fn test_should_not_get_items() {
         std::env::set_var("RUST_LOG", "debug");
@@ -90,16 +122,20 @@ mod tests {
 
         let mut mock_core = MockCoreService::new();
 
-        mock_core
-            .expect_get_items()
-            .returning(|q, s, o, l| -> _ {
-                assert_eq!(q, None);
-                assert_eq!(s, None);
-                assert_eq!(l, 10);
-                assert_eq!(o, 0);
+        mock_core.expect_get_items().returning(|q, s, o, l| -> _ {
+            assert_eq!(q, None);
+            assert_eq!(s, None);
+            assert_eq!(l, 10);
+            assert_eq!(o, 0);
 
-                Box::pin(async move { Ok(ResultPaging{items: vec![], total: 0, offset: 0}) })
-            });
+            Box::pin(async move {
+                Ok(ResultPaging {
+                    items: vec![],
+                    total: 0,
+                    offset: 0,
+                })
+            })
+        });
 
         let core_service: Arc<dyn CoreService> = Arc::new(mock_core);
 
@@ -107,12 +143,21 @@ mod tests {
             actix_web::App::new()
                 .app_data(web::Data::from(core_service))
                 .wrap(Logger::default())
-                .service(web::scope("").route("/items", web::get().to(get_items)))
+                .service(web::scope("").route("/items", web::get().to(get_items))),
         )
-            .await;
+        .await;
 
-        let req_model = GetItemsRequestDTO{ query: None, sort_by: None, offset: 0, limit: 10 };
-        let want_resp = ResultPaging{items: vec![], total: 0, offset: 0};
+        let req_model = GetItemsRequestDTO {
+            query: None,
+            sort_by: None,
+            offset: 0,
+            limit: 10,
+        };
+        let want_resp = ResultPaging {
+            items: vec![],
+            total: 0,
+            offset: 0,
+        };
 
         let req = actix_web::test::TestRequest::get()
             .uri("/items")
