# src/infrastructure/repositories/items.rs
@@ -1,13 +1,15 @@
-use crate::domain::models::items::{GetItemsQuery, GetItemsSortBy};
+use crate::domain::models::items::{GetItemsQuery, GetItemsSortBy, Item};
 use async_trait::async_trait;
 use diesel::prelude::*;
 use std::sync::Arc;
+use diesel::connection::SimpleConnection;
 
 use crate::domain::repositories::items::Repository;
 use crate::domain::repositories::repository::RepositoryResult;
 use crate::infrastructure::databases::postgresql::DBConn;
-use crate::infrastructure::models::items::{ItemDiesel, ItemsSizesDiesel, SizeDiesel};
+use crate::infrastructure::models::items::{ItemDiesel, ItemsSizesDiesel, SimpleItemDiesel, SizeDiesel};
 use crate::infrastructure::schema::items;
+use crate::infrastructure::schema::items::{description, name, price};
 use crate::infrastructure::schema::items_sizes;
 use crate::infrastructure::schema::sizes;
 
@@ -44,12 +46,12 @@ impl Repository for DieselRepository {
                     select = select.filter(items::id.eq_any(ids));
                 }
 
-                if let Some(price) = query.price {
-                    if let Some(from) = price.from {
+                if let Some(q_price) = query.price {
+                    if let Some(from) = q_price.from {
                         select = select.filter(items::price.ge(from));
                     }
 
-                    if let Some(to) = price.to {
+                    if let Some(to) = q_price.to {
                         select = select.filter(items::price.le(to));
                     }
                 }
@@ -108,55 +110,95 @@ impl Repository for DieselRepository {
 
         Ok(out)
     }
+
+    async fn create_item(&self, item: Item) -> RepositoryResult<i64> {
+        let pool = self.pool.clone();
+
+        let mut conn = pool.get()?;
+
+        let inserted_id = conn.transaction::<_, diesel::result::Error, _>(|conn| {
+            let s_item = SimpleItemDiesel {
+                name: item.name,
+                description: item.description,
+                price: item.price,
+            };
+
+            let size = SizeDiesel {
+                id: 0,
+                name: item.name.clone(),
+            };
+
+            let stmt = diesel::insert_into(items::table)
+                .values(&s_item)
+                .returning(items::id)
+                .get_result(conn)?;
+            Ok(stmt)
+        })?;
+
+        Ok(inserted_id)
+    }
 }
 
 #[cfg(test)]
 mod tests {
-    use std::sync::{Mutex};
     use super::*;
+    use crate::domain::models::items::{NamesGetItemsQuery, PriceGetItemsQuery};
     use crate::infrastructure::databases::postgresql::db_pool;
     use diesel::connection::SimpleConnection;
     use diesel::r2d2::{ConnectionManager, PooledConnection};
+    use std::sync::Mutex;
     use testcontainers::clients;
     use testcontainers::images::postgres;
-    use crate::domain::models::items::{NamesGetItemsQuery, PriceGetItemsQuery};
 
     fn migrate_tables(conn: Arc<Mutex<PooledConnection<ConnectionManager<PgConnection>>>>) {
         let mut conn = conn.lock().unwrap();
 
-        conn.batch_execute("CREATE TABLE items (
+        conn.batch_execute(
+            "CREATE TABLE items (
     id BIGSERIAL PRIMARY KEY,
     name VARCHAR NOT NULL,
     description VARCHAR NOT NULL,
     price DOUBLE PRECISION NOT NULL
-);").unwrap();
-        conn
-            .batch_execute("CREATE TABLE sizes (
+);",
+        )
+        .unwrap();
+        conn.batch_execute(
+            "CREATE TABLE sizes (
     id SERIAL PRIMARY KEY,
     name VARCHAR NOT NULL
-);")
-            .unwrap();
-        conn.batch_execute("CREATE TABLE items_sizes (
+);",
+        )
+        .unwrap();
+        conn.batch_execute(
+            "CREATE TABLE items_sizes (
     id BIGSERIAL PRIMARY KEY,
     item_id BIGSERIAL NOT NULL,
     size_id SERIAL NOT NULL,
     quantity INTEGER NOT NULL,
     FOREIGN KEY (item_id) REFERENCES items(id),
     FOREIGN KEY (size_id) REFERENCES sizes(id)
-);").unwrap();
+);",
+        )
+        .unwrap();
     }
 
     fn insert_test_data(connection: Arc<Mutex<PooledConnection<ConnectionManager<PgConnection>>>>) {
         let mut connection = connection.lock().unwrap();
 
         connection
-            .batch_execute("INSERT INTO items (name, price, description) VALUES ('Item 1', 1000, '')")
+            .batch_execute(
+                "INSERT INTO items (name, price, description) VALUES ('Item 1', 1000, '')",
+            )
             .unwrap();
         connection
-            .batch_execute("INSERT INTO items (name, price, description) VALUES ('Item 2', 2000, '')")
+            .batch_execute(
+                "INSERT INTO items (name, price, description) VALUES ('Item 2', 2000, '')",
+            )
             .unwrap();
         connection
-            .batch_execute("INSERT INTO items (name, price, description) VALUES ('Item 3', 3000, '')")
+            .batch_execute(
+                "INSERT INTO items (name, price, description) VALUES ('Item 3', 3000, '')",
+            )
             .unwrap();
 
         connection
@@ -176,7 +218,9 @@ mod tests {
             .batch_execute("INSERT INTO items_sizes (item_id, size_id, quantity) VALUES (2, 2, 0)")
             .unwrap();
         connection
-            .batch_execute("INSERT INTO items_sizes (item_id, size_id, quantity) VALUES (3, 3, 100)")
+            .batch_execute(
+                "INSERT INTO items_sizes (item_id, size_id, quantity) VALUES (3, 3, 100)",
+            )
             .unwrap();
     }
 
@@ -283,11 +327,22 @@ mod tests {
         insert_test_data(protected_conn);
         let want = get_items_wanted()[2..].to_vec();
 
-        let res = db.get_items(Some(GetItemsQuery{
-            ids: None,
-            price: Some(PriceGetItemsQuery{ from: Some(3000.0), to: None }),
-            names: None,
-        }), None, 0, 10).await.unwrap();
+        let res = db
+            .get_items(
+                Some(GetItemsQuery {
+                    ids: None,
+                    price: Some(PriceGetItemsQuery {
+                        from: Some(3000.0),
+                        to: None,
+                    }),
+                    names: None,
+                }),
+                None,
+                0,
+                10,
+            )
+            .await
+            .unwrap();
         assert_eq!(want, res);
     }
 
@@ -311,11 +366,22 @@ mod tests {
         insert_test_data(protected_conn);
         let want = get_items_wanted()[1..2].to_vec();
 
-        let res = db.get_items(Some(GetItemsQuery{
-            ids: None,
-            price: None,
-            names: Some(NamesGetItemsQuery{ full: Some(vec!["Item 2".to_string()]), partly: None }),
-        }), None, 0, 10).await.unwrap();
+        let res = db
+            .get_items(
+                Some(GetItemsQuery {
+                    ids: None,
+                    price: None,
+                    names: Some(NamesGetItemsQuery {
+                        full: Some(vec!["Item 2".to_string()]),
+                        partly: None,
+                    }),
+                }),
+                None,
+                0,
+                10,
+            )
+            .await
+            .unwrap();
         assert_eq!(want, res);
     }
 
@@ -339,11 +405,22 @@ mod tests {
         insert_test_data(protected_conn);
         let want = get_items_wanted()[0..1].to_vec();
 
-        let res = db.get_items(Some(GetItemsQuery{
-            ids: None,
-            price: None,
-            names: Some(NamesGetItemsQuery{ full: None, partly:  Some(vec!["1".to_string()])}),
-        }), None, 0, 10).await.unwrap();
+        let res = db
+            .get_items(
+                Some(GetItemsQuery {
+                    ids: None,
+                    price: None,
+                    names: Some(NamesGetItemsQuery {
+                        full: None,
+                        partly: Some(vec!["1".to_string()]),
+                    }),
+                }),
+                None,
+                0,
+                10,
+            )
+            .await
+            .unwrap();
         assert_eq!(want, res);
     }
 
@@ -367,11 +444,19 @@ mod tests {
         insert_test_data(protected_conn);
         let want = get_items_wanted()[1..].to_vec();
 
-        let res = db.get_items(Some(GetItemsQuery{
-            ids: Some(vec![2,3]),
-            price: None,
-            names: None,
-        }), None, 0, 10).await.unwrap();
+        let res = db
+            .get_items(
+                Some(GetItemsQuery {
+                    ids: Some(vec![2, 3]),
+                    price: None,
+                    names: None,
+                }),
+                None,
+                0,
+                10,
+            )
+            .await
+            .unwrap();
         assert_eq!(want, res);
     }
 
@@ -396,11 +481,22 @@ mod tests {
         let mut want = get_items_wanted();
         want.reverse();
 
-        let res = db.get_items(Some(GetItemsQuery{
-            ids: None,
-            price: None,
-            names: None,
-        }), Some(GetItemsSortBy{ field: "price".to_string(), desc: true }), 0, 10).await.unwrap();
+        let res = db
+            .get_items(
+                Some(GetItemsQuery {
+                    ids: None,
+                    price: None,
+                    names: None,
+                }),
+                Some(GetItemsSortBy {
+                    field: "price".to_string(),
+                    desc: true,
+                }),
+                0,
+                10,
+            )
+            .await
+            .unwrap();
         assert_eq!(want, res);
     }
 }
