# swagger.yaml
@@ -30,6 +30,31 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '500':
           $ref: '#/components/responses/InternalServerError'
+    post:
+      tags:
+        - ItemsAPI
+      summary: 'Create an item'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/itemWithoutID'
+      responses:
+        '200':
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  id:
+                    type: integer
+                    format: int64
+                    example: 1
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
 
 components:
   responses:
@@ -139,13 +164,46 @@ components:
           items:
             type: object
             required:
-              - size
-              - quantity
+              - name
+              - count
             properties:
-              size:
+              name:
                 type: string
                 example: 'M'
-              quantity:
+              count:
+                type: integer
+                format: int64
+                example: 5
+    itemWithoutID:
+      type: 'object'
+      required:
+        - name
+        - description
+        - price
+        - sizes
+      properties:
+        name:
+          type: 'string'
+          example: 'Red T-Shirt'
+        description:
+          type: 'string'
+          example: 'Cool description'
+        price:
+          type: 'number'
+          format: 'double'
+          example: 199.00
+        sizes:
+          type: array
+          items:
+            type: object
+            required:
+              - name
+              - count
+            properties:
+              name:
+                type: string
+                example: 'M'
+              count:
                 type: integer
                 format: int64
                 example: 5
